# SDL2-Template

./: CMakeLists.txt  README.md
core/src/: main.cpp
